--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - MYSQL_DATABASE=mysql-db
       - MYSQL_USER=root
       - MYSQL_PASSWORD=root
+      - MYSQL_ROOT_PASSWORD=root
     networks:
       - express-network
 
